# gemma-challenge-senpai

./: .env.example  .gitignore  AGENTS.md  AWS_INFRA.md  BASELINE.md  GEMMA_CHALLENGE_SETUP.md  README.md  SENPAI_INFRA_AGNOSTIC_PLAN.md  program.md  pyproject.toml  train.py
data/: deltastock_gpqa_diamond.json  deltastock_knowledge_mmlupro.json  deltastock_proxies.meta.json  deltastock_reasoning_math.json  private_proxy_native_casual.json  private_proxy_native_casual.json.meta.json  private_proxy_native_code.json  private_proxy_native_code.json.meta.json  private_proxy_native_longctx.json  private_proxy_native_longctx.json.meta.json  private_proxy_native_math.json  private_proxy_native_math.json.meta.json  private_proxy_native_multilingual.json  private_proxy_native_multilingual.json.meta.json  private_proxy_sharegpt.json  private_proxy_sharegpt.json.meta.json
docs/: GEMMA_CHALLENGE_SETUP.md
infra/aws/: README.md
instructions/: prompt-advisor.md  prompt-student.md  training-request.md
logs/pr523/: pr_comment.md  run_chain_BCD.sh
logs/pr532/: pr_comment.md
logs/pr544/: pr_comment.md
logs/pr561/: pr_comment.md
logs/pr570/: results_comment.md
logs/pr572/: results_comment.md
logs/pr584/: results_comment.md
logs/pr606/: pr_comment.md  run_arms.pid  run_dev307_confirm.pid  smoke_v22.pid  venv_build.pid
logs/pr812/: results_comment.md  run_attr.sh  run_cs.sh  (+4 more)
research/: CURRENT_RESEARCH_STATE.md  DATASET_ANALYSIS.md  EXPERIMENTS_LOG.md  README.md  RESEARCH_IDEAS_2026-06-13_1400.md  RESEARCH_IDEAS_2026-06-13_2015.md  RESEARCH_IDEAS_2026-06-13_22:15.md  RESEARCH_IDEAS_2026-06-13_round2.md  RESEARCH_IDEAS_2026-06-13_round3.md  RESEARCH_IDEAS_2026-06-14_0425.md  RESEARCH_IDEAS_2026-06-14_04:40.md  RESEARCH_IDEAS_2026-06-14_06:30.md  RESEARCH_IDEAS_2026-06-14_07:00.md  RESEARCH_IDEAS_2026-06-14_0945.md  RESEARCH_IDEAS_2026-06-14_12:20.md  RESEARCH_IDEAS_2026-06-14_speed-levers.md  RESEARCH_IDEAS_2026-06-15_0955.md  RESEARCH_IDEAS_2026-06-16_0200.md  RESEARCH_IDEAS_2026-06-16_04:30.md  RESEARCH_IDEAS_2026-06-16_11:33.md  RESEARCH_IDEAS_2026-06-17_10:30.md  RESEARCH_IDEAS_2026-06-18_orthogonal-speed.md  RESEARCH_IDEAS_2026-06-20_16:40.md  RESEARCH_IDEAS_2026-06-20_18:00.md  RESEARCH_IDEAS_2026-06-20_20:00.md  RESEARCH_IDEAS_VALIDVERIFY_2026-06-14.md  cublaslt_det_microbench.py  m1_gemv_microbench.py
scripts/: __init__.py  analyze_prompt_lookup.py  analyze_suffix_budget.py  common.py  frontier_watch.py  local_prevalidate.py  poll_messages.py  poll_run.py  post_message.py  post_result.py  run_hf_job.py  sync_official_harness.py  sync_official_resources.py  upload_submission.py  wandb_logging.py
submissions/: README.md
submissions/lmhead12k_int4head/vllm_plugin/: pyproject.toml
submissions/lmhead12k_int4head/vllm_plugin/vllm_lmhead12k/: model.py
(+6788 files in other folders)
