[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemma-challenge-senpai"
version = "0.1.0"
description = "Senpai target workspace for the Hugging Face Fast Gemma Challenge."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "python-dotenv>=1.0",
    "huggingface-hub>=0.27.0",
    "wandb>=0.19.0",
    # EAGLE-3 drafter distillation corpus generation (PR #16): loads the public
    # MATH STEM corpus for offline hidden-state distillation.
    "datasets>=2.0",
]

[project.scripts]
a10g = "a10g_node.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["infra/aws/src/a10g_node"]
